[package]
name = "pointcloud"
version = "0.1.0"
authors = ["Abhishek N V <abhicnv007@gmail.com>"]
edition = "2018"
description = "A library to compute KNN."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
