[package]
name = "knn"
version = "0.1.2"
authors = ["Abhishek N V <abhicnv007@gmail.com>"]
edition = "2018"
description = "A library to compute KNN."
license = "MIT"

readme = "README.md"
homepage = "https://github.com/abhicnv007/knn"
repository = "https://github.com/abhicnv007/knn.git"

[dependencies]

[dev-dependencies]
criterion = "0.3"
rand = "0.7.3"

[[bench]]
name = "benchmark"
harness = false
